# -Fitness-Tracker-Crew-AI

./: README.md  pyproject.toml
output/: README.md  analytics_design.md  app.py  fitness_domain_spec.md  test_workout_tracker  workout_tracker.py  workout_tracker_design.md
src/fitness_tracker_crew/: crew.py  main.py
src/fitness_tracker_crew/config/: agents.yaml  tasks.yaml
