[project]
name = "fitness_tracker_crew"
version = "0.1.0"
description = "fitness_tracker_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1",
    "gradio>=5.49.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]

[project.scripts]
fitness_tracker_crew = "fitness_tracker_crew.main:run"
run_crew = "fitness_tracker_crew.main:run"
train = "fitness_tracker_crew.main:train"
replay = "fitness_tracker_crew.main:replay"
test = "fitness_tracker_crew.main:test"
run_with_trigger = "fitness_tracker_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
